crates/mecojoni-core/tests/fixtures/invalid/body-unicode-rule.meco
---
meco: 1
module: invalid
---

# naïve
- Hello.
